force-app/main/default/objects/SCOC__MLA__c/SCOC__MLA__c.object-meta.xml
<CustomObject>
    <description>Response Entity MLA</description>
    <label>Military Lending Act</label>
    <nameField>
        <displayFormat>MLA-{00000}</displayFormat>
        <label>MLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Military Lending Act</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>