force-app/main/default/objects/SCOC__MLA__c/fields/SCOC__Code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Code__c</fullName>
    <description>MLA Code</description>
    <label>MLA Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>