force-app/main/default/objects/SCOC__MLA__c/fields/SCOC__CoveredBorrowerStatus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CoveredBorrowerStatus__c</fullName>
    <description>MLA covered borrower status</description>
    <label>Covered Borrower Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>