force-app/main/default/objects/SCOC__MLA__c/fields/SCOC__Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Disclaimer__c</fullName>
    <description>MLA disclaimer</description>
    <label>Disclaimer</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>