force-app/main/default/objects/SCOC__MLA__c/fields/SCOC__ReferralContactNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReferralContactNumber__c</fullName>
    <description>MLA referral contact number</description>
    <label>Referral Contact Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>