force-app/main/default/objects/SCOC__MLA__c/fields/SCOC__Status__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Status__c</fullName>
    <description>MLA Status</description>
    <label>MLA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>